--- a/manuscript/f1000_submission/f1000research.latex
+++ b/manuscript/f1000_submission/f1000research.latex
@@ -26,7 +26,7 @@ $for(author)$
 \author[$author.affilnum$]{$author.name$}
 $endfor$
 $for(affiliation)$
-\affil[$affiliation.affilnum$]{$affilitation.affil$}
+\affil[$affiliation.affilnum$]{$affiliation.affil$}
 $endfor$
 
 \maketitle
