--- a/manuscript/f1000_submission/manuscript.Rmd
+++ b/manuscript/f1000_submission/manuscript.Rmd
@@ -8,23 +8,23 @@ author:
 - affilnum: 1
   name: Betty J. Kreakie
 affiliation:
-- affil: US Environmental Protection Agency, Office of Research and Development, National
+- affil: "US Environmental Protection Agency, Office of Research and Development, National
     Health and Environmental Effects Research Laboratory, Atlantic Ecology Division,
-    27 Tarzwell Drive  Narragansett, RI, 02882, USA
+    27 Tarzwell Drive  Narragansett, RI, 02882, USA"
   affilnum: 1
 output:
   pdf_document:
     fig_caption: yes
     keep_tex: yes
     number_sections: yes
-    template: components/f1000research.latex
+    template: f1000research.latex
   html_document: null
 capsize: normalsize
-csl: components/plos.csl
+csl: plos.csl
 documentclass: article
 fontsize: 11pt
 linenumbers: yes
-bibliography: components/manuscript.bib
+bibliography: manuscript.bib
 spacing: doublespacing
 abstract: "Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of adverse health effects that stem mostly from the presence of cyanotoxins. To help protect against these impacts, several health advisory levels have been set for some toxins. In particular, one of the more common toxins, microcystin, has several advisory levels set for drinking water and recreational use. However, compared to other water quality measures, field measurements of microcystin are not commonly available due to cost and advanced understanding required to interpret results. Addressing these issues will take time and resources. Thus, there is utility in finding indicators of microcystin that are already widely available, can be estimated quickly and in situ, and used as a first defense against high levels of microcystin. Chlorophyll *a* is commonly measured, can be estimated *in situ*, and has been shown to be positively associated with microcystin. In this paper, we use this association to provide estimates of chlorophyll a concentrations that are indicative of a higher probability of exceeding select health advisory concentrations for microcystin-LR. Using the 2007 National Lakes Assessment and a conditional probability approach, we identify chlorophyll *a* concentrations that are more likely than not to be associated with an exceedance of a microcystin health advisory level. We look at the recent US EPA health advisories for drinking water as well as the World Health Organization levels for drinking water and recreational use and identify a range of chlorophyll *a* thresholds. A 50% chance of exceeding one of the specific advisory microcystin concentrations of 0.3, 1, 1.6, and 2 g/L is associatied with chlorophyll *a* concentration thresholds of 24.64, 65.6, 89.71, and 94.93, respectively. When managing for these various microcystin levels, exceeding these reported chlorophyll *a* concentrations should be a trigger for further testing and possible management action."
 ---
@@ -44,16 +44,21 @@ if(!require(microcystinchla)){
   devtools::install_github("usepa/microcystinchla",
                            auth_token = getOption("Github_Access"))
 }
+if(!require(microcystinchla)){
+  devtools::install_github("jhollist/autocrop",
+                           auth_token = getOption("Github_Access"))
+}
 if(!require(viridis)){
   install.packages("viridis") 
 }
+library("autocrop")
 library("microcystinchla")
 library("dplyr")
 library("magrittr")
 library("pander")
 library("knitr")
 library("e1071")
-opts_chunk$set(dev = 'pdf', fig.width=6, fig.height=5)
+#opts_chunk$set(dev = 'pdf', fig.width=6, fig.height=5)
 
 # Table Captions from @DeanK on http://stackoverflow.com/questions/15258233/
 # using-table-caption-on-r-markdown-file-using-knitr-to-use-in-pandoc-to-convert-t
@@ -208,70 +213,45 @@ Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of a
 
 Over the last decade, numerous events and legislative activities have raised the public awareness of harmful algal blooms [@jetoo2015toledo; @rinta2009lake; @HABHRCA2014]. In response the US Environmental Protection Agency (USEPA) has recently released suggested microcystin-LR (one of the more common toxins) concentrations that would trigger health advisories [@mcelhiney2005detection; @zurawell2005hepatotoxic; @usepa2015drinking].  Additionally, the World Health Organization (WHO) has proposed microcystin advisory levels for drinking water and a range of recreational risk levels [@world2003cyanobacterial; @chorus1999toxic].   While these levels and associated advisories are likely to help mitigate the impacts from harmful algal blooms, they are not without complications.  
 
+
 One of these complications is that they rely on available measurements of microcystin-LR.  While laboratory testing (e.g., chromatography) remains the gold standard for quantifying microcystin-LR concentrations in water samples, several field test kits have been developed.  Even though field tests provide a much needed means for rapid assessment, they are not yet widely used and are moderately expensive (approximately $150-$200 depending on specific kit) with a limited shelf life (typically one year) [@james2011environmental; @aranda2015evaluation].  Additionally, each technique requires nuanced understanding of the detection method (e.g., limit of detection, specific microcystin variants being measured, and sampling protocol).  
 
+
 Fortunately, microcystin-LR has been shown to be associated with several other, more commonly measured and well understood components of water quality that are readily assessed in the field.  For instance, there are small or hand held fluorometers that measure chlorohpyll *a*.  Additionally, chlorophyll *a* is a very commonly measured component of water quality that is also known to be positively associated with microsystin-LR concentrations [@pip2014microcystin; @yuan2014managing].  Yuan et. al [-@yuan2014managing] explore these associations in detail and control for other related variables.  In their analysis they find that total nitrogen and chlorophyll *a* show the strongest association with microcystin. Furthermore, they identify chlorophyll*a* and total nitrogen concentrations that are associated with exceeding 1 $\mu$g/L of microcystin.   Given these facts, it should be possible to identify chlorophyll *a* concentrations that would be associated with the new USEPA microcystin-LR health advisory levels for drinking water.  Identifying these associations would provide another tool for water resource managers to help manage the threat to public health posed by cHABs and would be especially useful in the absence of measured microcystin-LR concentrations.  
+
 
 In this paper we build on past efforts and utilize the National Lakes Assessment (NLA) data and identify chlorophyll *a* concentrations that are associated with higher probabilities of exceeding several microcystin-LR health advisory concentrations [@usepa2009national; @usepa2015drinking; @chorus1999toxic].  We add to past studies by exploring associations with newly announced advisory levels and by also applying a different method, conditional probability analysis.  Utilizing different methods strengthens the evidence for suggested chlorophyll *a* levels that are associated with increased risk of exceeding the health advisory levels as those levels are not predicated on a single analytical method.  So that others may repeat or adjust this analysis, the data, code, and this manuscript are freely available via [https://github.com/USEPA/microcystinchla](https://github.com/USAPE/microcystinchla).
 
 #Methods
 
 ##Data
+
 We used the 2007 NLA chlorophyll *a* and microcystin-LR concentration data [@usepa2009national, [NLA](http://www2.epa.gov/national-aquatic-resource-surveys/national-lakes-assessment)]. These data represent a snapshot of water quality from the summer of 2007 for the conterminous United States and were collected as part of an ongoing probabilistic monitoring program [@usepa2009national]. Data on chlorophyll *a* and microcystin-LR concentrations are available for `r nrow(na.omit(nla_dat$CHLA,nla_dat$MCYST_TL_UGL))` lakes.  
 
 ##Analytical Methods
+
 We used a conditional probability analysis (CPA) approach to explore associations between chlorophyll *a* concentrations and World Health Organization (WHO) and USEPA microcystin-LR health advisory levels [@paul2011probability].  Many health advisory levels have been suggested (Table \ref{tab:microcystin_levels}), but lakes with higher microcystin-LR concentrations in the NLA were rare. Only `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat)),2)`% of lakes sampled had a concentration greater than 10 $\mu$g/L.  Thus, for this analysis we focused on the microcystin concentrations that are better represented in the NLA data. These were the USEPA children's drinking water advisory level of  0.3 $\mu$g/L (USEPA Child), the WHO drinking water advisory level of 1 $\mu$g/L (WHO Drinking), the USEPA adult drinking water advisory level of 1.6 $\mu$g/L (USEPA Adult), and the WHO recreational, low probability of effect advisory level of 2 $\mu$g/L (WHO Recreational).
+
 
 Conditional probability analysis provides information about the probability of observing one event given another event has also occured.  For this analysis, we used CPA to examine how the conditional probability of exceeding one of the health advisories changes as chlorophyll *a* increases in a lake.  We expect to find higher chlorohpyll *a* concentrations to be associated with higher probabilities of exceeding the microcystin-LR health advisory levels.  We also calculated bootstrapped 95% confidence intervals (CI) using 1000 bootstrapped samples.  Thus, to identify chlorophyll *a* concentrations of concern we identfiy the value of the upper 95% CI across a range of conditional probabilities of exceeding each health advisory level.  Using the upper confidence limit to identify a threshold is justified as it ensures that a given threshold is unlikely to miss a microcystin exceedance.
 
+
 As both microcystin-LR and chlorophyll *a* values were highely skewed right, a log base 10 transformation was used.  Additional details of the specific implementation are available at https://github.com/USEPA/microcystinchla.  A more detailed discussion of CPA is beyond the scope of this paper, but see Paul et al. [-@paul2005development] and Hollister et al. [-@hollister2008cprob] for greater detail.  Lastly, all analyses were conducted using R version 3.2.2 and code and data from this analysis are freely available as an R package at [https://github.com/USEPA/microcystinchla](https://github.com/USAPE/microcystinchla).  
+
 
 Lastly, we assess the ability of these chlorophyll *a* thresholds to predict microcystin exceedance.  We use error matrices and calculate total accuracy as well as the proportion of false negatives.  Total accuracy is the total number of correct predictions divided by total observations.  The proportion of false negatives is the total number of lakes that were predicted to not exceed the microcystin guidelines but actually did, divided by the total number of observations. 
 
 
 #Results
+
 In the 2007 NLA, microcystin-LR concentrations ranged from `r min(nla_dat$MCYST_TL_UGL,na.rm=T)` to `r max(nla_dat$MCYST_TL_UGL, na.rm=T)` $\mu$g/L.  Microcystin-LR concentrations of 0.05 $\mu$g/L represent the detection limits.  Any value greater than that indicates the presence of microcystin-LR.  Of those lakes with microcystin, the median concentration was `r round(median(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L and the mean was `r round(mean(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>0.05],na.rm=T), 2)`$\mu$g/L.  Of all lakes sampled, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=0.3])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Child level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1.6])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the USEPA Adult level, `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=1])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Drinking level, and `r round(100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=2])/length(nla_dat$MCYST_TL_UGL)),1)`% of lakes exceeded the WHO Recreational level. For chlorophyll *a*, the range was `r min(nla_dat$CHLA,na.rm=T)` to `r max(nla_dat$CHLA, na.rm=T)` $\mu$g/L.  All lakes had reported chlorophyll *a* concentrations that exceeded detection limits.  The median concentration was `r median(nla_dat$CHLA,na.rm=T)` $\mu$g/L and the mean was `r round(mean(nla_dat$CHLA,na.rm=T),2)` $\mu$g/L.  The associations between chlorophyll *a* and the upper confidence interval across a range of conditional probability values are shown in Table \ref{tab:mc_chla_table}.  Specific chlorophyll *a* that are associated with greater than even odds of exceeding the advisory levels were `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`$\mu$g/L for 0.3, 1.0, 1.6, and 2.0 $\mu$g/L advisory levels, respectively (Table \ref{tab:mc_chla_table} & Figure \ref{fig:multi_cp_plot}).   
 
-The chlorophyll *a* cutoffs may be used to predict whether or not a lake exceeds the microcystin-LR health advisories.  Doing so allows us to compare the accuracy of the prediction as well as evaluate false negatives.  Total accuracy of the four cutoffs predicting microcystin-LR exceedances were `r total_accuracy$epa_child*100`% for the USEPA children's advisory, `r total_accuracy$who_drink*100`% for the WHO drinking water advisory,  `r total_accuracy$epa_adult*100`% for the USEPA adult advisory, and `r total_accuracy$who_rec*100`% for the WHO regreational advisory (Tables \ref{tab:child_conmat_table}, \ref{tab:who_drink_conmat_table}, \ref{tab:adult_conmat_table}, & \ref{tab:who_rec_conmat_table}).  However, total accuracy is only one part of the prediction performace with which we are concerned.  
-
-When using the chlorophyll *a* cutoffs as an indicator of microcystin-LR exceedances, the error that should be avoided is predicting that no exceedance has occurred when in fact it has.  In other words, we would like to avoid Type II errors and minimize the proportion of false negatives.  For the four chlorophyll *a* cut-offs we had a proportion of false negatives of `r fn_percent$epa_child*100`%, `r fn_percent$who_drink*100`%, `r fn_percent$epa_adult*100`%, and `r fn_percent$who_rec*100`% for the USEPA children's, the WHO drinking water, the USEPA adult, and the WHO recreational advisories, respectively.  In each case we missed less than 10% of the lakes that in fact exceeded the microcystin-LR advisory.  While this method performs well with regard to the false negative percentage, it is possible that is a relic of the NLA dataset and testing with additional data would allow us to confirm this result. 
-
-#Discussion
-The association between Log10 microcystin-LR and Log10 chlorophyll *a* shows a wedge pattern (Figure \ref{fig:chla_micro_scatter}).  This indicates that, in general, higher concentrations of microcystin-LR almost always co-occur with higher concentrations of chlorophyll *a* yet the inverse is not true.  Higher chlorophyll *a* is not necessarily predictive of higher microcystin-LR concentrations; however, chlorophyll *a* may be predictive of the probability of exceeding a certain threshold. 
-
-This is the case as the probability of exceeding each of the four tested health advisory levels increases as a function of chlorophyll *a* concentration (Figure \ref{fig:multi_cp_plot}).  We used this association to identify chlorophyll *a* concentrations that are associated with a range of probabilities of exceeding a given health advisory level (Table \ref{tab:mc_chla_table}).  For the purposes of this discussion we focus on a conditional probability of 50% or greater (i.e., greater than even odds to exceed a health advisory level). The 50% conditional probability chlorophyll *a* thresholds represents `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,1]])/length(nla_dat$CHLA)),1)`%, `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,2]])/length(nla_dat$CHLA)),1)`%,
-`r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,3]])/length(nla_dat$CHLA)),1)`%, and `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,4]])/length(nla_dat$CHLA)),1)`% of sample lakes for the USEPA Child, the WHO Drinking, the USEPA Adult, and the WHO recreational levels, respecitvely.  
-
-There are numerous possible uses for the chlorophyll *a* and microcystin-LR advisory cut-off values.  First, in the absence of microcystin-LR measurements, exceedence of the chlorophyll *a* concentrations could be a trigger for further actions.  Given that there is uncertainity around these chlorophyll *a* cutoffs the best case scenario would be to monitor for chlorophyll *a* and in the event of exceeding a target concentration take water samples and have those samples tested for microcystin-LR.  
-
-A second potential use is to identify past bloom events from historical data.  As harmful algal blooms are made up of many species and have various mechanisms responsible for adverse impacts (e.g., toxins, hypoxia, odors), there is no single definition of a bloom.  For cHABs, one approach has been to identify an increase over a baseline concentration of phycocyanin [@miller2013spatiotemporal].  This is a useful approach for targeted studies, but phycocyanin is also not always available and measures the predominance of cyanobacterial pigments and not toxins. Using our chlorophyll *a* cutoffs provides a value that is more directly associated with microcystin-LR and can be used to classify lakes, from past surveys, as having bloomed.  
-
-Lastly, using chlorophyll *a* is not meant as a replacement for testing of microcystin-LR or other toxins.  It should be used when other, direct measurements of cyanotoxins are not available.  In those cases, which are likely to be common at least in the near future, using a more ubiquitous measurement, such as chlorophyll *a* will provide a reasonable proxy for the probability of exceeding a microcystin-LR health advisory level and provide better protection against adverse effects in both drinking and recreational use cases. 
-
-#Acknowledgements
-We would like to thank Anne Kuhn, Bryan Milstead, John Kiddon, Joe LiVolsi, Tim Gleason, and Wayne Munns for constructive reviews of this paper. This paper has not been subjected to Agency review. Therefore, it does not necessary reflect the views of the Agency. Mention of trade names or commercial products does not constitute endorsement or recommendation for use. This contribution is identified by the tracking number ORD-015143 of the Atlantic Ecology Division, Office of Research and Development, National Health and Environmental Effects Research Laboratory, US Environmental Protection Agency.
-
-
-\newpage
-
-#Figures
-
-```{r chla_micro_scatter, echo=FALSE, fig.width=6, fig.cap="Scatterplot showing association betweeen chlorophyll \\textit{a} and microcystin-LR. \\label{fig:chla_micro_scatter}"}
-plot_scatter(nla_dat,xvar="log_chla",yvar = "log_micro",pt_col = "black",
-             x=expression(paste('Log10 Chl ', italic("a"),' (',mu,'g/L)')),
-             y=expression(paste('Log10 microcystin-LR',' (',mu,'g/L)')))
-```
-
-\newpage
-
-<!--
-```{r chla_micro_cdf, echo=FALSE, fig.cap="Conditional probability plots showing association between the probability of exceeding various microcystin-LR (MLR) health advisory Levels. \\label{fig:chla_micro_cdf}"}
-plot_cdf(nla_dat[,c("log_chla","log_micro")],"")
-```
-
-\newpage-->
-
-```{r epa_child_cp_plot, echo=FALSE, fig.width=6, fig.cap="Conditional probability plots showing association between the probability of exceeding various microcystin-LR (MLR) health advisory Levels. A.) Plot for USEPA Child (0.3 $\\mu$g/L). B.) Plot for WHO Drinking (1 $\\mu$g/L). C.) Plot for USEPA Adult (1.6 $\\mu$g/L). D.) Plot for WHO Recreational (2 $\\mu$g/L). \\label{fig:multi_cp_plot}"}
+```{r epa_child_cp_plot, echo=FALSE, fig.width=6, fig.cap="",warning=FALSE,message=FALSE}
+jpeg(filename = "hollister_microcystin_fig2.jpg",
+       res = 450,
+       width = 7.82,
+       height = 6.8,
+       units = "in")
 multiplot(
   plot_cp(epa_child_cp,x = "Log 10 Chlorophyll", 
           y = "Conditional Probability",
@@ -287,13 +267,72 @@ multiplot(
           title="D."),
   cols=2
 )
+x<-dev.off()
+x<-autocrop("hollister_microcystin_fig2.jpg",border = 25, 
+            outfile = "hollister_microcystin_fig2.jpg",
+            width = 6.1,
+            res = 450)
 ```
 
-\newpage
+\begin{figure}
+\centering
+\includegraphics[width=0.4\textwidth]{hollister_microcystin_fig2.jpg}
+\caption{\label{fig:multi_cp_plot}Conditional probability plots showing association between the probability of exceeding various microcystin-LR (MLR) health advisory Levels. A.) Plot for USEPA Child (0.3 $\mu$g/L). B.) Plot for WHO Drinking (1 $\mu$g/L). C.) Plot for USEPA Adult (1.6 $\mu$g/L). D.) Plot for WHO Recreational (2 $\mu$g/L).  }
+\end{figure}
+
+The chlorophyll *a* cutoffs may be used to predict whether or not a lake exceeds the microcystin-LR health advisories.  Doing so allows us to compare the accuracy of the prediction as well as evaluate false negatives.  Total accuracy of the four cutoffs predicting microcystin-LR exceedances were `r total_accuracy$epa_child*100`% for the USEPA children's advisory, `r total_accuracy$who_drink*100`% for the WHO drinking water advisory,  `r total_accuracy$epa_adult*100`% for the USEPA adult advisory, and `r total_accuracy$who_rec*100`% for the WHO regreational advisory (Tables \ref{tab:child_conmat_table}, \ref{tab:who_drink_conmat_table}, \ref{tab:adult_conmat_table}, & \ref{tab:who_rec_conmat_table}).  However, total accuracy is only one part of the prediction performace with which we are concerned.  
+
+
+When using the chlorophyll *a* cutoffs as an indicator of microcystin-LR exceedances, the error that should be avoided is predicting that no exceedance has occurred when in fact it has.  In other words, we would like to avoid Type II errors and minimize the proportion of false negatives.  For the four chlorophyll *a* cut-offs we had a proportion of false negatives of `r fn_percent$epa_child*100`%, `r fn_percent$who_drink*100`%, `r fn_percent$epa_adult*100`%, and `r fn_percent$who_rec*100`% for the USEPA children's, the WHO drinking water, the USEPA adult, and the WHO recreational advisories, respectively.  In each case we missed less than 10% of the lakes that in fact exceeded the microcystin-LR advisory.  While this method performs well with regard to the false negative percentage, it is possible that is a relic of the NLA dataset and testing with additional data would allow us to confirm this result. 
+
+
+#Discussion
+
+The association between Log10 microcystin-LR and Log10 chlorophyll *a* shows a wedge pattern (Figure \ref{fig:chla_micro_scatter}).  This indicates that, in general, higher concentrations of microcystin-LR almost always co-occur with higher concentrations of chlorophyll *a* yet the inverse is not true.  Higher chlorophyll *a* is not necessarily predictive of higher microcystin-LR concentrations; however, chlorophyll *a* may be predictive of the probability of exceeding a certain threshold. 
+
+
+```{r chla_micro_scatter, echo=FALSE, fig.width=6, fig.cap="", warning=FALSE, message=FALSE}
+ggplot2::ggsave("hollister_microcystin_fig2.jpg",
+       plot_scatter(nla_dat,xvar="log_chla",yvar = "log_micro",pt_col = "black",
+             x=expression(paste('Log10 Chl ', italic("a"),' (',mu,'g/L)')),
+             y=expression(paste('Log10 microcystin-LR',' (',mu,'g/L)'))),
+       dpi = 450,
+       height = 6.8,
+       units = "in")
+x<-autocrop("hollister_microcystin_fig2.jpg",border = 25, 
+            outfile = "hollister_microcystin_fig2.jpg",
+            width = 6.1,
+            res = 450)
+```
+
+\begin{figure}
+\centering
+\includegraphics[width=0.4\textwidth]{hollister_microcystin_fig2.jpg}
+\caption{\label{fig:chla_micro_scatter}Scatterplot showing association betweeen chlorophyll \textit{a} and microcystin-LR. }
+\end{figure}
+
+This is the case as the probability of exceeding each of the four tested health advisory levels increases as a function of chlorophyll *a* concentration (Figure \ref{fig:multi_cp_plot}).  We used this association to identify chlorophyll *a* concentrations that are associated with a range of probabilities of exceeding a given health advisory level (Table \ref{tab:mc_chla_table}).  For the purposes of this discussion we focus on a conditional probability of 50% or greater (i.e., greater than even odds to exceed a health advisory level). The 50% conditional probability chlorophyll *a* thresholds represents `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,1]])/length(nla_dat$CHLA)),1)`%, `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,2]])/length(nla_dat$CHLA)),1)`%,
+`r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,3]])/length(nla_dat$CHLA)),1)`%, and `r round(100*(length(nla_dat$CHLA[nla_dat$CHLA>=mc_chla[5,4]])/length(nla_dat$CHLA)),1)`% of sample lakes for the USEPA Child, the WHO Drinking, the USEPA Adult, and the WHO recreational levels, respecitvely.  
+
+
+There are numerous possible uses for the chlorophyll *a* and microcystin-LR advisory cut-off values.  First, in the absence of microcystin-LR measurements, exceedence of the chlorophyll *a* concentrations could be a trigger for further actions.  Given that there is uncertainity around these chlorophyll *a* cutoffs the best case scenario would be to monitor for chlorophyll *a* and in the event of exceeding a target concentration take water samples and have those samples tested for microcystin-LR.  
+
+
+A second potential use is to identify past bloom events from historical data.  As harmful algal blooms are made up of many species and have various mechanisms responsible for adverse impacts (e.g., toxins, hypoxia, odors), there is no single definition of a bloom.  For cHABs, one approach has been to identify an increase over a baseline concentration of phycocyanin [@miller2013spatiotemporal].  This is a useful approach for targeted studies, but phycocyanin is also not always available and measures the predominance of cyanobacterial pigments and not toxins. Using our chlorophyll *a* cutoffs provides a value that is more directly associated with microcystin-LR and can be used to classify lakes, from past surveys, as having bloomed.  
+
+
+Lastly, using chlorophyll *a* is not meant as a replacement for testing of microcystin-LR or other toxins.  It should be used when other, direct measurements of cyanotoxins are not available.  In those cases, which are likely to be common at least in the near future, using a more ubiquitous measurement, such as chlorophyll *a* will provide a reasonable proxy for the probability of exceeding a microcystin-LR health advisory level and provide better protection against adverse effects in both drinking and recreational use cases. 
+
+
+#Acknowledgements
+
+We would like to thank Anne Kuhn, Bryan Milstead, John Kiddon, Joe LiVolsi, Tim Gleason, and Wayne Munns for constructive reviews of this paper. This paper has not been subjected to Agency review. Therefore, it does not necessary reflect the views of the Agency. Mention of trade names or commercial products does not constitute endorsement or recommendation for use. This contribution is identified by the tracking number ORD-015143 of the Atlantic Ecology Division, Office of Research and Development, National Health and Environmental Effects Research Laboratory, US Environmental Protection Agency.
+
+\onecolumn
 
 #Tables
 
-```{r microcystin_levels,echo=FALSE,results='asis', tab.cap="Various suggested microcystin-LR health advisory concentrations. \\label{tab:microcystin_levels}"}
+```{r microcystin_levels,echo=FALSE,results='asis'}
 source_of_stnd <- c("WHO",
                     "WHO",
                     "WHO",
@@ -308,13 +347,13 @@ type_of_stnd <- c("Recreational: Low Prob. of Effect",
                   "Drinking Water",
                   "Child Drinking Water Advisory",
                   "Adult Drinking Water Advisory")
-concentration <- c("2-4 $\\mu$g/L",
-                   "10-20 $\\mu$g/L",
-                   "20-2000 $\\mu$g/L",
-                   ">2000 $\\mu$g/L",
-                   "1 $\\mu$g/L",
-                   "0.3 $\\mu$g/L",
-                   "1.6 $\\mu$g/L")
+concentration <- c("2-4 $mu$g/L",
+                   "10-20 $mu$g/L",
+                   "20-2000 $mu$g/L",
+                   ">2000 $mu$g/L",
+                   "1 $mu$g/L",
+                   "0.3 $mu$g/L",
+                   "1.6 $mu$g/L")
 #note <- c("Low probability of adverse health effects",
 #          "Moderate probability of adverse health effects",
 #          "High probability of adverse health effects, These higher #concentrations typically only seen in visible scums/algal mats",
@@ -326,43 +365,79 @@ mc_conc_table <- data.frame(source_of_stnd, type_of_stnd, concentration) %>%
   arrange(type_of_stnd)
 names(mc_conc_table)<-c("Source","Type","Concentration")
 #pandoc.table(mc_conc_table,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
-knitr::kable(mc_conc_table,format="latex")
+#knitr::kable(mc_conc_table,format="latex")
+print(xtable::xtable(mc_conc_table,
+                     label="microcystin_levels",
+                     caption="Various suggested microcystin-LR health advisory 
+                     concentrations."), 
+      include.rownames=FALSE, comment = FALSE,caption.placement = "top")
 ```
 
-\newpage
 
-```{r mc_chla_table, results='asis', echo=FALSE, tab.cap="Chlorophyll \\textit{a} concentrations that are associated with a 50% probability of exceeding a microcystin-LR health advisory concentration. \\label{tab:mc_chla_table}"}
+
+```{r mc_chla_table, results='asis', echo=FALSE}
 mc_chla_tbl <- data.frame(seq(0.1,0.9,0.1),mc_chla)
 names(mc_chla_tbl)<-c("Cond. Probability","USEPA Child", "WHO Drink", 
                       "USEPA Adult", "WHO Recreational")
 #pandoc.table(mc_chla_tbl,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
-knitr::kable(mc_chla_tbl,format="latex")
+#knitr::kable(mc_chla_tbl,format="latex")
+print(xtable::xtable(mc_chla_tbl,
+                     label="mc_chla_table",
+                     caption="Chlorophyll \\textit{a} concentrations that are 
+                     associated with a 50% probability of exceeding a 
+                     microcystin-LR health advisory concentration."),
+      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
+```
+
+
+
+```{r child_conmat_table, results='asis', echo=FALSE}
+#knitr::kable(child_conmat,format="latex")
+print(xtable::xtable(child_conmat,
+                     label="child_conmat_table",
+                     caption="Confusion matrix comparing chlorophyll \\textit{a} 
+                     predicted exceedences (rows) versus real exceedances 
+                     (columns) for the USEPA childrens drinking water advisory."),
+      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
+```
+
+
+
+```{r who_drink_conmat_table, results='asis', echo=FALSE}
+#knitr::kable(who_drink_conmat,format="latex")
+print(xtable::xtable(who_drink_conmat,
+                     label="who_drink_conmat_table",
+                     caption="Confusion matrix comparing chlorophyll \\textit{a} 
+                     predicted exceedences (rows) versus real exceedances 
+                     (columns) for the WHO drinking water advisory."),
+      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
+```
+
+
+
+```{r adult_conmat_table, results='asis', echo=FALSE}
+#knitr::kable(adult_conmat,format="latex")
+print(xtable::xtable(adult_conmat,
+                     label="adult_conmat_table",
+                     caption="Confusion matrix comparing chlorophyll \\textit{a} 
+                     predicted exceedences (rows) versus real exceedances 
+                     (columns) for the USEPA adult drinking water advisory."),
+      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
+```
+
+
+
+```{r who_rec_conmat_table, results='asis', echo=FALSE}
+#knitr::kable(who_rec_conmat,format="latex")
+print(xtable::xtable(who_rec_conmat,
+                     label="who_rec_conmat_table",
+                     caption="Confusion matrix comparing chlorophyll \\textit{a} 
+                     predicted exceedences (rows) versus real exceedances 
+                     (columns) for the WHO recreational water advisory."),
+      include.rownames = FALSE, comment = FALSE,caption.placement = "top")
 ```
 
 \newpage
-
-```{r child_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the USEPA childrens drinking water advisory. \\label{tab:child_conmat_table}"}
-knitr::kable(child_conmat,format="latex")
-```
-
-\newpage
-
-```{r who_drink_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the WHO drinking water advisory. \\label{tab:who_drink_conmat_table}"}
-knitr::kable(who_drink_conmat,format="latex")
-```
-
-\newpage
-
-```{r adult_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the USEPA adult drinking water advisory. \\label{tab:adult_conmat_table}"}
-knitr::kable(adult_conmat,format="latex")
-```
-
-\newpage
-
-```{r who_rec_conmat_table, results='asis', echo=FALSE, tab.cap="Confusion matrix comparing chlorophyll \\textit{a} predicted exceedences (rows) versus real exceedances (columns) for the WHO recreational water advisory. \\label{tab:who_rec_conmat_table}"}
-knitr::kable(who_rec_conmat,format="latex")
-```
-
-\newpage
+\twocolumn
 
 #References
